// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settinsg render when authorised user renders as expected 1`] = `
<Settings>
  <button
    className="c-button c-button--image"
    onClick={[Function]}
  >
    <img
      src="myImage123"
      title="Fred Spanner"
    />
  </button>
</Settings>
`;

exports[`Settinsg render when nonauthorised user renders as expected 1`] = `
<Settings>
  <button
    className="c-button"
    onClick={[Function]}
  >
    <Icon
      as="i"
      name="power off"
    >
      <i
        aria-hidden="true"
        className="power off icon"
        onClick={[Function]}
      />
    </Icon>
  </button>
</Settings>
`;
